tests/parser-test-files/bad-files/define-type.12.error
error: Malformed type definition
  --> test:5:21
   |
 5 |    T1 "one docstring" "another docstring")
   |                       ^^^^^^^^^^^^^^^^^^^ only one docstring allowed per constructor
