tests/parser-test-files/bad-files/define-type.12.coal
;; BAD: Define Type- multiple constructor docstrings
(package test-package)

(define-type T
  T1 "one docstring" "another docstring")
